tests/ui/typeck/call-block.stderr
error[E0618]: expected function, found `{integer}`
  --> $DIR/call-block.rs:2:13
   |
LL |     let _ = {42}();
   |             ^^^^--
   |             |
   |             call expression requires function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
