tests/ui/typeck/call-block.rs
fn main() {
    let _ = {42}(); //~ ERROR expected function, found `{integer}`
}
